 - correction of build method for rpt_list attribute in product
 - make bam_cluster_count_check pipeline job dependent on
     qc_spatial_filter (in function_list_central.json)
 - archival daemon - sleep for an hour after a successful submission -
     we want to avoid doing parallel s3 uploads for multiple runs
 - wr executor - explicitly propagate pipeline's environment to jobs
 - illumina archiver job - exclude discontinued verbose attribute and paths
   that are not needed for the minimal work this loader is doing now

release 52.1
 - bug fix in jobs names where jobs name should include the pipeline
   name: pipeline name is now propagated from the pluggable module
   to the function module; bug manifestation - job names contained
   function module name instead of the pipeline name, ie, for
   example prod_pipeline_end_26263_start_stop instead of
   prod_lsf_start_26263_central
 - pipeline name attribute is derived from the script name that
   invoked the pipeline, making it unnecessary to explicitly pass
   the function list name in the archival pipeline script
 - fix for seq_alignment so specified rna aligners do rna analysis
 - added (samtools) target stats to stage2 analysis
 - correct p4 prunes for samtools stats (target/baits)

release 52.0.5
 - bug fix in npg_run_is_deletable: stop using unsupported options
   for npg_pipeline::cache
 - npg_run_is_deletable should not expect adapter qc results for a
   pool, the source files do not exist since release 52.0
 - add log archiver to the end of the archival pipeline
 - use outgoing paths for jobs which are run after the run_qc_complete
   function; this patch also fixes the log file path for lsf_end job of
   the archival pipeline, which previously was always in outgoing

release 52.0.4
 - bug fix: change path for a file with LSF commands to a path in
   outgoing for jobs that run after the run was moved to the outgoing
   directory

release 52.0.3