@@ -28,8 +28,11 @@ LIST OF CHANGES
  - archival daemon - sleep for an hour after a successful submission -
      we want to avoid doing parallel s3 uploads for multiple runs
  - wr executor - explicitly propagate pipeline's environment to jobs
- - illumina archiver job - exclude discontinued verbose attribute and paths
-   that are not needed for the minimal work this loader is doing now
+ - illumina archiver job:
+     exclude discontinued verbose attribute and paths that are not needed
+     for the minimal work this loader is doing now;
+     remove LSF preexec requesting that the job is a unique runner since
+     db queries are much simpler now
 
 release 52.1
  - bug fix in jobs names where jobs name should include the pipeline
